@@ -79,7 +79,7 @@ def save_bed(outfilename, start_pos, labels, coord, num_labels):
         # this is easily concatenated since it has no context
         for seg_start, seg_end, seg_label in zipper:
             name = str(seg_label)
-            score = SCORE_MIN + (seg_label * score_step)
+            score = str(SCORE_MIN + (seg_label * score_step))
             chrom_start = str(seg_start)
             chrom_end = str(seg_end)
             item_rgb = get_label_color(seg_label)
